# everscale-ledger-wallet

./: .gitignore  Cargo.toml  README.md
src/: ledger.rs  ledger_error.rs  lib.rs  locator.rs  remote_wallet.rs
