[package]
name = "everscale-ledger-wallet"
version = "0.1.0"
edition = "2021"
authors = ["Broxus team"]
publish = false
license-file = "LICENSE"

[dependencies]
console = "0.15.0"
dialoguer = "0.10.2"
ed25519-dalek = "1.0.1"
hidapi = { version = "1.4.1", default-features = false, optional = true }
hex = "0.4.3"
log = "0.4.17"
num-derive = { version = "0.3" }
num-traits = { version = "0.2" }
parking_lot = "0.12"
qstring = "0.7.2"
semver = "1.0"
thiserror = "1.0"
uriparse = "0.6.4"

[features]
default = ["linux-static-hidraw"]
linux-static-libusb = ["hidapi/linux-static-libusb"]
linux-static-hidraw = ["hidapi/linux-static-hidraw"]
linux-shared-libusb = ["hidapi/linux-shared-libusb"]
linux-shared-hidraw = ["hidapi/linux-shared-hidraw"]

[[bin]]
name = "everscale-ledger-udev"
path = "src/bin/ledger-udev.rs"
