[package]
name = "everscale-ledger-wallet"
version = "0.1.0"
edition = "2021"
authors = ["Broxus team"]
publish = false
license-file = "LICENSE"

[dependencies]
anyhow = "1.0"
console = "0.15"
dialoguer = "0.11"
hidapi = { version = "2.2", default-features = false, optional = true }
log = "0.4"
num-derive = { version = "0.4" }
num-traits = { version = "0.2" }
parking_lot = "0.12"
semver = "1.0"
thiserror = "1.0"
uriparse = "0.6.4"

ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }

[features]
default = ["linux-static-hidraw", "hidapi"]
linux-shared-hidraw = ["hidapi/linux-shared-hidraw"]
linux-shared-libusb = ["hidapi/linux-shared-libusb"]
linux-static-hidraw = ["hidapi/linux-static-hidraw"]
linux-static-libusb = ["hidapi/linux-static-libusb"]

[[bin]]
name = "everscale-ledger-udev"
path = "src/bin/ledger-udev.rs"
